# the_rock

./: .env  CMakeLists.txt  Dockerfile.cpp  Dockerfile.node  Makefile  README.md  docker-compose.yml  mega-monitor.js  monitor-fixed.js  monitor.js  package-lock.json  package.json  quick-start.sh  setup-macos.sh  start-monitor.sh  start-webull.sh  start.sh  ultimate-start.sh  webull-monitor.js
bridge/: server.js
client/: package-lock.json  package.json
include/core/: CircularBuffer.h  PriceData.h  StockMonitor.h
src/: App.css  App.jsx  index-standalone.js  index.js  main.cpp  monitor.js  multi-monitor.js  universal-monitor.js  yahoo-monitor.js
src/core/: StockMonitor.cpp  StockMonitor.js
src/services/: AlpacaDataStream.js
